--- a/Web/TimeManagement/Views/Report/TimeSheetManagement.cshtml
+++ b/Web/TimeManagement/Views/Report/TimeSheetManagement.cshtml
@@ -1,4 +1,6 @@
 ﻿@model List<TimeManagement.Models.Task>
+<link href="~/Content/css/select2.min.css" rel="stylesheet" />
+<script src="~/Scripts/select2.min.js"></script>
 <script type="text/javascript" src="~/Scripts/TableTools.js"></script>
 <script type="text/javascript">
     var oTable;
@@ -30,9 +32,9 @@
             location.href = '@Url.Content("~/Report/ExportTaskDetails")';
         });
 
-      
+
 //        $('#project').selectpicker({ noneSelectedText: 'Select Project' });
-//       
+//
         $("#fromdate").change(function () {
             var fromdate = $('#fromdate').val();
             if (fromdate == "") {
@@ -57,6 +59,12 @@
             }
             return true;
 
+        });
+
+        $('#location').select2({
+            sorter: list => list.sort((a, b) => a.text.localeCompare(b.text)),
+            allowClear: true,
+            placeholder: "Select Location",
         });
 
     });
@@ -104,7 +112,7 @@
             location_l = location_l + $(this).val();
 
         })
-    
+
 
 
 
@@ -126,18 +134,18 @@
             "fnServerParams": function (aoData) {
                 aoData.push({ name: 'fromdate', value: $('#fromdate').val() });
                 aoData.push({ name: 'toDate', value: $('#todate').val() });
-                aoData.push({ name: 'location', value: location_l });            
-               
+                aoData.push({ name: 'location', value: location_l });
+
             },
             "aoColumns": [
-                                        { "mData": "EmployeeName", "sTitle": "User Name" }   
+                                        { "mData": "EmployeeName", "sTitle": "User Name" }
                                             ]
 //            GroupText = "Sub Total for " +  parseFloat(TotalHours);
         });
 
     }
-                
-    
+
+
 
 </script>
 
@@ -146,7 +154,7 @@
 <div class="row">
     <div class="boxshade">
         <div class="boxhead">
-          Missing TimeSheet Entry Report
+            Missing TimeSheet Entry Report
         </div>
         <div class="boxbody">
             <div class="col-lg-12 pad10 gap-bottom10" style="background-color: #F5F5F5;">
@@ -155,41 +163,47 @@
                     {
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>From Date</b></div>
+                                <b>From Date</b>
+                            </div>
                             <div class="col-lg-12 pad0">
                                 <input type="text" id="fromdate" class="form-control datePicker required" placeholder="From"
-                                    name="fromDate" />
+                                       name="fromDate" />
                                 <div id="fdate" class="hidden">
-                                    From Date Required</div>
+                                    From Date Required
+                                </div>
                             </div>
                         </div>
-                 
+
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>To Date</b></div>
+                                <b>To Date</b>
+                            </div>
                             <div class="col-lg-12 pad0">
                                 <input type="text" id="todate" class="form-control datePicker required" placeholder="To"
-                                    name="toDate" />
+                                       name="toDate" />
                                 <div id="tdate" class="hidden">
-                                    To Date Required</div>
+                                    To Date Required
+                                </div>
                             </div>
                         </div>
                         if (User.IsInRole("Administrator"))
-                        {                       
-                        <div class="col-lg-2">
-                            <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>Location</b></div>
-                            <div class="col-lg-12 pad0">
-                                @Html.DropDownList("locations", null,"Select Location", new { @class = "form-control", id = "location"})
+                        {
+                            <div class="col-lg-2">
+                                <div class="col-lg-12 pad0 gap-bottom5">
+                                    <b>Location</b>
+                                </div>
+                                <div class="col-lg-12 pad0">
+                                    @Html.DropDownList("locations", null, " ", new { @class = "form-control", id = "location" })
+                                </div>
                             </div>
-                        </div>
                         }
                         <div class="col-lg-12 gap-top5">
                             <button type="button" onclick="return fundate();" class="btn btn-info pull-right gap-right10"
-                                id="getreport">
-                                Submit</button>
+                                    id="getreport">
+                                Submit
+                            </button>
                         </div>
-                       
+
                     }
                 </div>
                 <div class="col-lg-12">
@@ -199,7 +213,7 @@
             <div class="col-lg-12 gap-bottom10">
                 <table id="timeByDate" class="table table-striped table-bordered">
                 </table>
-               
+
             </div>
         </div>
     </div>
