--- a/Web/TimeManagement/Views/Report/TimeByWeek.cshtml
+++ b/Web/TimeManagement/Views/Report/TimeByWeek.cshtml
@@ -1,8 +1,10 @@
 ﻿@model TimeManagement.Domain.WeekTasks
+<link href="~/Content/css/select2.min.css" rel="stylesheet" />
+<script src="~/Scripts/select2.min.js"></script>
 <script type="text/javascript">
     function fundate() {
         var fromdate = $('#fromdate').val();
-          if (fromdate == "") {
+        if (fromdate == "") {
             $('#fdate').removeClass('hidden');
             return false;
         }
@@ -13,7 +15,7 @@
 
     $(document).ready(function () {
 
-        $('#project').selectpicker({ noneSelectedText: 'Select Project' });
+        //('#project').selectpicker({ noneSelectedText: 'Select Project' });
 
         $("#fromdate").change(function () {
             var fromdate = $('#fromdate').val();
@@ -27,8 +29,13 @@
             return true;
 
         });
-        
-       
+
+        $('#project').select2(
+            {
+                allowClear: true,
+                placeholder: "Select Project",
+            });
+
     });
 </script>
 @using System.Data;
@@ -44,83 +51,97 @@
                     {
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>Date</b></div>
+                                <b>Date</b>
+                            </div>
                             <div class="col-lg-12 pad0">
                                 <input type="text" id="fromdate" class="form-control datePicker required" placeholder="From" name="fromDate" />
                                 <div id="fdate" class="hidden">
-                                    Date Required</div>
+                                    Date Required
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>Project</b></div>
+                                <b>Project</b>
+                            </div>
                             <div class="col-lg-12 pad0">
-                                @Html.DropDownList("Projects", null,"Select Project", new { @class = "form-control", id = "project" })
+                                @Html.DropDownList("Projects", null, " ", new { @class = "form-control", id = "project" })
                             </div>
                         </div>
-                        
+
                         <div class="col-lg-12 gap-top5">
                             <button type="submit" onclick="return fundate();" class="btn btn-info pull-right gap-right10">
-                                Submit</button>
+                                Submit
+                            </button>
                         </div>
                     }
                 </div>
-                <div class="col-lg-12" >
+                <div class="col-lg-12">
                     <span style="font-size: 12px">@ViewBag.Message</span>
                 </div>
             </div>
-                @if (Model.ReportData != null)
-                {
-                    <div class="col-lg-12 gap-bottom10">
-                        <table id="dataTable" class="table table-striped table-bordered">
-                            <thead>
-                                <tr>
-                                    <th width="11%" style="background-color: #2481B7; color: #FFF">
-                                        User Name
+            @if (Model.ReportData != null)
+            {
+                <div class="col-lg-12 gap-bottom10">
+                    <table id="dataTable" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th width="11%" style="background-color: #2481B7; color: #FFF">
+                                    User Name
+                                </th>
+                                @{for (int i = 3; i <= Model.ReportData.Columns.Count - 1; i++)
+                                    {
+                                        <th width="11%" style="background-color: #2481B7; color: #FFF">
+                                            @Model.ReportData.Columns[i]
                                     </th>
-                                    @{for (int i = 3; i <= Model.ReportData.Columns.Count - 1; i++)
-                                      {
-                                        <th width="11%" style="background-color: #2481B7; color: #FFF">@Model.ReportData.Columns[i]
-                                        </th>
-                                      }}
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @{
-                                      foreach (DataRow row in Model.ReportData.AsEnumerable())
-                                      {   
+                                }}
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @{
+                                foreach (DataRow row in Model.ReportData.AsEnumerable())
+                                {
                                     <tr>
-                                        <td style="text-align: left">@row["LastName"].ToString(),@row["FirstName"].ToString()
+                                        <td style="text-align: left">
+                                            @row["LastName"].ToString(),@row["FirstName"].ToString()
                                         </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[3])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[4])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[5])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[6])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[7])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[8])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row[9])
-                                        </td>
-                                        <td style="text-align: center">@String.Format("{0:F}", row["Total Hours"])
-                                        </td>
-                                    </tr>
-                                      }
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-                }
-                else
-                {
-                    <div class="col-lg-12 gap-bottom10">
-                        <span class="label label-important"></span>
-                    </div>
-                }
+                                        <td style="text-align: center">
+                                            @String.Format("{0:F}", row[3])
+                                    </td>
+                                    <td style="text-align: center">
+                                        @String.Format("{0:F}", row[4])
+                                </td>
+                                <td style="text-align: center">
+                                    @String.Format("{0:F}", row[5])
+                            </td>
+                            <td style="text-align: center">
+                                @String.Format("{0:F}", row[6])
+                        </td>
+                        <td style="text-align: center">
+                            @String.Format("{0:F}", row[7])
+                    </td>
+                    <td style="text-align: center">
+                        @String.Format("{0:F}", row[8])
+                </td>
+                <td style="text-align: center">
+                    @String.Format("{0:F}", row[9])
+            </td>
+            <td style="text-align: center">
+                @String.Format("{0:F}", row["Total Hours"])
+        </td>
+    </tr>
+}
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            }
+            else
+            {
+                <div class="col-lg-12 gap-bottom10">
+                    <span class="label label-important"></span>
+                </div>
+            }
         </div>
     </div>
 </div>
