--- a/Web/TimeManagement/Views/Home/TimeEntry.cshtml
+++ b/Web/TimeManagement/Views/Home/TimeEntry.cshtml
@@ -1,5 +1,6 @@
 ﻿<link href="~/Content/css/select2.min.css" rel="stylesheet" />
 <script src="~/Scripts/select2.min.js"></script>
+<div class="row">
     <div class="boxshade">
         <div class="boxhead">
             Time Entry Form
