--- a/Web/TimeManagement/Views/Report/EmployeeActivityWiseSummaryReport.cshtml
+++ b/Web/TimeManagement/Views/Report/EmployeeActivityWiseSummaryReport.cshtml
@@ -1,11 +1,9 @@
 ﻿@model TimeManagement.ViewModel.ActivityWiseModel
 @using System.Data;
 @using System.Threading;
-@{
+@{ 
     ViewBag.Title = "EmployeeActivityWiseSummaryReport";
 }
-<link href="~/Content/css/select2.min.css" rel="stylesheet" />
-<script src="~/Scripts/select2.min.js"></script>
 <script type="text/javascript">
 
     var oTable;
@@ -62,14 +60,14 @@
         });
 
         $('#project').select2({
-            sorter: project_id => project_id.sort((a, b) => a.text.localeCompare(b.text)),
+            //: project_id => project_id.sort((a, b) => a.text.localeCompare(b.text)),
             allowClear: true,
             placeholder: "Select Project",
         });
 
 
         $('#location').select2({
-            sorter: list => list.sort((a, b) => a.text.localeCompare(b.text)),
+           // sorter: list => list.sort((a, b) => a.text.localeCompare(b.text)),
             allowClear: true,
             placeholder: "Select Location",
         });
