--- a/Web/TimeManagement/Views/Shared/_Layout.cshtml
+++ b/Web/TimeManagement/Views/Shared/_Layout.cshtml
@@ -12,8 +12,10 @@
     <link href="@Url.Content("~/Content/DataTables/css/dataTables.bootstrap.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/bootstrap-select.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/jquery.wysiwyg.css")" rel="stylesheet" type="text/css" />
-   <link href="@Url.Content("~/Content/themes/redmond/jquery-ui-1.8.21.custom.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/redmond/jquery-ui-1.8.21.custom.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/jquery.wysiwyg.modal.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/css/select2.min.css")" rel="stylesheet" type="text/css" />
+
     <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")" type="text/javascript"></script>
     @*<script src="@Url.Content("~/Scripts/jquery-migrate-1.2.1.min.js")" type="text/javascript"></script>*@
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
@@ -31,9 +33,17 @@
     <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/custom.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/select2.min.js")" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             baseURL = '/';
+
+            //$('#project').select2(
+            //    {
+            //        allowClear: true,
+            //        placeholder: "Select Project",
+            //    });
+
         });
         function Validation(From) {
             var fromdate = $("#txtfromdate").val();
