--- a/Web/TimeManagement/Views/Shared/_Menu.cshtml
+++ b/Web/TimeManagement/Views/Shared/_Menu.cshtml
@@ -9,32 +9,32 @@
                             <a href="@Url.Content("~/Home/TimeEntry")" role="menuitem">Time</a>
                         </li>
                         @*<li role="presentation">
-                            <a href="@Url.Content("~/Home/StatusReport")" role="menuitem">Status Report</a>
-                        </li>*@
+                    <a href="@Url.Content("~/Home/StatusReport")" role="menuitem">Status Report</a>
+                </li>*@
                     </ul>
                 </li>
-                 <li class="dropdown">
+                <li class="dropdown">
                     <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Profile<b class="caret"></b></a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
                         <li role="presentation">
                             <a href="@Url.Content("~/Home/ResetPassword")" role="menuitem">Change Password</a>
                         </li>
                         @*<li role="presentation">
-                            <a href="@Url.Content("~/Home/StatusReport")" role="menuitem">Status Report</a>
-                        </li>*@
+                    <a href="@Url.Content("~/Home/StatusReport")" role="menuitem">Status Report</a>
+                </li>*@
                     </ul>
                 </li>
 
-                 @if (User.IsInRole("Administrator"))
-                 {
-                 <li class="dropdown">
-                    <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Admin Masters<b class="caret"></b></a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
-                      
-                        
+                @if (User.IsInRole("Administrator"))
+                {
+                    <li class="dropdown">
+                        <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Admin Masters<b class="caret"></b></a>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
 
-                       
-                             <li role="presentation">
+
+
+
+                            <li role="presentation">
                                 <a href="@Url.Content("~/Master/GetCustomers")" role="menuitem">Customers</a>
                             </li>
                             <li role="presentation">
@@ -52,12 +52,44 @@
                             <li role="presentation">
                                 <a href="@Url.Content("~/Master/GetConfigurations")" role="menuitem">Configuration</a>
                             </li>
-                                            
-                        
-                    </ul>
-                </li>
+                            <li role="presentation">
+                                <a href="@Url.Content("~/Master/WorkCodeActivity")" role="menuitem">Workcode Activity</a>
+                            </li>
 
-                 }
+
+                        </ul>
+                    </li>
+
+                }
+
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="dropdown">
+                        <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Admin Masters<b class="caret"></b></a>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
+
+
+
+
+                            <li role="presentation">
+                                <a href="@Url.Content("~/Master/GetCustomers")" role="menuitem">Customers</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="@Url.Content("~/Master/GetEmployees")" role="menuitem">Employees</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="@Url.Content("~/Master/GetLocations")" role="menuitem">Locations</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="@Url.Content("~/Master/GetProjects")" role="menuitem">Projects</a>
+                            </li>
+                           
+
+
+                        </ul>
+                    </li>
+
+                }
 
                 <li class="dropdown">
                     <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
@@ -65,11 +97,11 @@
                         <li role="presentation">
                             <a href="@Url.Content("~/Report/TimeByDate")" role="menuitem">Time</a>
                         </li>
-                        
+
 
                         @if (User.IsInRole("Administrator"))
                         {
-                             <li role="presentation">
+                            <li role="presentation">
                                 <a href="@Url.Content("~/Report/TimeByWeek")" role="menuitem">Time-Weekly</a>
                             </li>
                             <li role="presentation">
@@ -78,9 +110,9 @@
                             <li role="presentation">
                                 <a href="@Url.Content("~/Report/MonthlyBilling")" role="menuitem">Monthly Billing</a>
                             </li>
-                         @*   <li role="presentation">
-                                <a href="@Url.Content("~/Report/MonthlyAccountsPayable")" role="menuitem">Monthly Accounts Payable</a>
-                            </li>*@
+                            @*   <li role="presentation">
+                        <a href="@Url.Content("~/Report/MonthlyAccountsPayable")" role="menuitem">Monthly Accounts Payable</a>
+                    </li>*@
                             <li role="presentation">
                                 <a href="@Url.Content("~/Report/MTSInternalbilling")" role="menuitem">MTS Internal Billing Accounts Reconciliation</a>
                             </li>
@@ -93,34 +125,34 @@
                             <li role="presentation">
                                 <a href="@Url.Content("~/Report/CategoryWiseReport")" role="menuitem">Task - Category Wise Report</a>
                             </li>
-                            
+
                             @*<li role="presentation">
-                                <a href="@Url.Content("~/Report/StatusByDate")" role="menuitem">Status Report</a>
-                            </li>*@
+                        <a href="@Url.Content("~/Report/StatusByDate")" role="menuitem">Status Report</a>
+                    </li>*@
                             <li role="presentation">
                                 <a href="@Url.Content("~/Report/ProjectWise")" role="menuitem">Project - Type Wise Report</a>
                             </li>
-                               <li role="presentation">
+                            <li role="presentation">
                                 <a href="@Url.Content("~/Report/EmployeeActivityWiseSummaryReport")" role="menuitem">Proj - Locn - Employee Activities – Summary</a>
                             </li>
-                            
-                               <li role="presentation">
+
+                            <li role="presentation">
                                 <a href="@Url.Content("~/Report/EmployeeActivityWiseDetailedReport")" role="menuitem"> Proj - Employee Activities – Detailed</a>
                             </li>
                         }
                     </ul>
                 </li>
-                
-               @* @if (User.IsInRole("Administrator"))
-                {
-                    <li class="dropdown">
-                        <a href="@Url.Content("~/Home/Admin")" role="button">Admin Services</a>
-                    </li> 
-                } *@
+
+                @* @if (User.IsInRole("Administrator"))
+        {
+            <li class="dropdown">
+                <a href="@Url.Content("~/Home/Admin")" role="button">Admin Services</a>
+            </li>
+        } *@
                 <li class="dropdown">
                     <a href="@Url.Content("~/Home/Logoff")" role="button">Logoff</a>
                 </li>
             </ul>
-        </div>
+</div>
     </div>
 </div>
