--- a/Web/TimeManagement/Views/Master/_PVAddEmployee.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVAddEmployee.cshtml
@@ -35,8 +35,8 @@
                             <div class="col-lg-4 gap-top5 text-right">
                                 <b>User Id</b></div>
                             <div class="col-lg-7">
-                                @Html.TextBoxFor(m => m.Login.UserId, new { @class = "required  form-control" })
-                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.Login.UserId)</div>
+                                @Html.TextBoxFor(m => m.LoginUserID, new { @class = "required  form-control" })
+                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.LoginUserID)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
