Work Code and Work Code Activity

--- a/Web/TimeManagement/Views/Shared/_Menu.cshtml
+++ b/Web/TimeManagement/Views/Shared/_Menu.cshtml
@@ -47,13 +47,13 @@
                                 <a href="@Url.Content("~/Master/GetProjects")" role="menuitem">Projects</a>
                             </li>
                             <li role="presentation">
-                                <a href="@Url.Content("~/Master/GetWorkCodes")" role="menuitem">WorkCodes</a>
+                                <a href="@Url.Content("~/Master/GetWorkCodes")" role="menuitem">Work Codes</a>
                             </li>
                             <li role="presentation">
                                 <a href="@Url.Content("~/Master/GetConfigurations")" role="menuitem">Configuration</a>
                             </li>
                             <li role="presentation">
-                                <a href="@Url.Content("~/Master/WorkCodeActivity")" role="menuitem">Workcode Activity</a>
+                                <a href="@Url.Content("~/Master/GetWorkCodeActivity")" role="menuitem">Work Code Activity</a>
                             </li>
 
 
