--- a/Web/TimeManagement/Views/Master/WorkcodeActivity.cshtml
+++ b/Web/TimeManagement/Views/Master/WorkcodeActivity.cshtml
@@ -14,10 +14,14 @@
             "bAutoWidth": false,
             "bProcessing": true,
             "bServerSide": false,
-            "sAjaxSource": '@Url.Content("~/Master/GetWorkCodesDetails")',
-            "aoColumns": [{ "mData": "Id", "sTitle": "Id", "sClass": "text-center" }
-                            , { "mData": "Name", "sTitle": "Work Code Name" }
+            "sAjaxSource": '@Url.Content("~/Master/GetWorkCodeActivitys")',
+            "aoColumns": [{ "mData": "id", "sTitle": "Id", "sClass": "text-center" }
+                            , { "mData": "Name", "sTitle": "Work Code Activity Name" }
+                            , { "mData": "Number", "sTitle": "Number", "sClass": "text-center" }
+                            , { "mData": "Billable", "sTitle": "Billable" }
+
                     ]
+
         });
 
         $("#taskTable tbody").on('click', 'tr', function () {
@@ -26,7 +30,7 @@
             if ($(this).hasClass('row_selected')) {
                 $(this).removeClass('row_selected');
                 $('#btnEditWorkCode').attr("disabled", "disabled");
-               $('#btnAssignRole').attr("disabled", "disabled");
+              //  $('#btnDeleteWorkCode').attr("disabled", "disabled");
 
             }
             else {
@@ -35,13 +39,13 @@
                 $(this).addClass('row_selected');
 
                 $('#btnEditWorkCode').removeAttr("disabled");
-                $('#btnAssignRole').removeAttr("disabled");
+              //  $('#btnDeleteWorkCode').removeAttr("disabled");
 
             }
 
             var sData = oTable.fnGetData(this);
 
-            selectedid = sData.Id;
+            selectedid = sData.DT_RowId;
         });
 
 
@@ -52,7 +56,7 @@
     function AddWorkCode() {
          $.ajax({
          type: 'GET',
-         url: '@Url.Content("~/Master/AddWorkCodes")',
+         url: '@Url.Content("~/Master/AddWorkCodeActivity")',
          success: function (data) {
                 $('div#MainPopUp').html(data);
                 $('div#MainPopUp').modal('show');
@@ -61,33 +65,21 @@
      });
  }
 
+ function EditWorkCode() {
 
-    function EditWorkCode() {
+     $.ajax({
+         type: 'GET',
+         url: '@Url.Content("~/Master/EditWorkCodeActivity")',
+         data:{"id":selectedid},
+         success: function (data) {
+             $('div#MainPopUp').html(data);
+             $('div#MainPopUp').modal('show');
+         },
+         cache: false
+     });
+ }
 
-        $.ajax({
-            type: 'GET',
-            url: '@Url.Content("~/Master/EditWorkCodes")',
-            data: { "id": selectedid },
-            success: function (data) {
-                $('div#MainPopUp').html(data);
-                $('div#MainPopUp').modal('show');
-            },
-            cache: false
-        });
 
-    }
-    function AssignWorkCodeActivity() {
-        $.ajax({
-            type: 'GET',
-            url: '@Url.Content("~/Master/AssignWorkCodeActivity")',
-            data: { "id": selectedid },
-            success: function (data) {
-                $('div#MainPopUp').html(data);
-                $('div#MainPopUp').modal('show');
-            },
-            cache: false
-        });
-    }
 // function DeleteWorkCode() {
 
 //     if (confirm("Do you want to delete this WorkCode?")) {
@@ -96,7 +88,7 @@
 //             url: '@Url.Content("~/Master/DeleteWorkCode")',
 //             data: { "id": selectedid },
 //             success: function (data) {
-//                 window.location = '@Url.Content("~/Master/GetWorkCodes")';
+//                 window.location = '@Url.Content("~/Master/GetWorkCodeActivity")';
 //             },
 //             cache: false
 //         });
@@ -110,20 +102,19 @@
 <div class="row">
     <div class="boxshade">
         <div class="boxhead">
-            Work Codes
+            Work Code Activity
         </div>
         <div class="boxbody">
             <div class="col-lg-12 gap-bottom10">
-               
+                @*<button id="btnDeleteWorkCode" disabled="disabled" value="Cancel" onclick="DeleteWorkCode();" class="btn btn-info pull-right gap-right10">
+                    <i class="fa-trash-o"></i>&nbsp;Delete WorkCode</button>*@
                 <button id="btnEditWorkCode" disabled="disabled" value="edit" class="btn btn-info pull-right gap-right10" onclick="EditWorkCode();">
-                    <i class="fa-edit"></i>&nbsp;Edit Work Code
+                    <i class="fa-edit"></i>&nbsp;Edit Work Code Activity
                 </button>
                 <button id="btnAddWorkCode" value="Ok" onclick="AddWorkCode();" class="btn btn-info pull-right gap-right10">
-                    <i class="fa-plus"></i>&nbsp;Add Work Code
+                    <i class="fa-plus"></i>&nbsp;Add Work Code Activity
                 </button>
-                <button id="btnAssignRole"  disabled="disabled" onclick="AssignWorkCodeActivity();" class="btn btn-info pull-right gap-right10">
-                    <i class="fa-random"></i>&nbsp;Assign Activity
-                </button>
+
             </div>
             <div class="col-lg-12">
                 <table class="custom table table-striped table-bordered" id="taskTable">
@@ -133,9 +124,14 @@
                                 WorkCode ID
                             </th>
                             <th class="text-center">
-                                WorkCode  Name
+                                Work Code Activity Name
                             </th>
-                            
+                            <th class="text-center">
+                                Work Code Activity Number
+                            </th>
+                            <th class="text-center">
+                                Billable
+                            </th>
 
 
                         </tr>
