--- a/Web/TimeManagement/Views/Master/_PVADDWorkcodeActivity.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVADDWorkcodeActivity.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimeManagement.Models.WorkCode
+﻿@model TimeManagement.Models.WorkCodeActivity
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 <script type="text/javascript">
@@ -16,7 +16,7 @@
         return true;
     }
 </script>
-@using (Html.BeginForm("/AddWorkCodes", "Master", FormMethod.Post, new { id = "WorkCodeAddForm" }))
+@using (Html.BeginForm("/AddWorkCodeActivity", "Master", FormMethod.Post, new { id = "WorkCodeAddForm" }))
 {
     <div class="modal-dialog">
         <div class="modal-content">
@@ -25,7 +25,7 @@
                     <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                 </button>
                 <h4 class="modal-title">
-                    Add New Work Code
+                    Add New Work Code Activity
                 </h4>
             </div>
             <div class="modal-body">
@@ -33,7 +33,7 @@
                     <div class="col-lg-12">
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
-                                <b>Work Code Name</b>
+                                <b>Work Code Activity Name</b>
                             </div>
                             <div class="col-lg-7">
                                 @Html.TextBoxFor(m => m.Name, new { @class = "required  form-control", maxlength = "70" })
@@ -43,7 +43,30 @@
                                 <div>@Html.ValidationMessageFor(m => m.Name)</div>
                             </div>
                         </div>
-                       
+                        <div class="col-lg-12 gap-bottom5">
+                            <div class="col-lg-4 gap-top5 text-right">
+                                <b> Number</b>
+                            </div>
+                            <div class="col-lg-7">
+                                @Html.TextBoxFor(m => m.Number, new { @class = "form-control ", onkeypress = "return isNumber(event)", id = "worknum" })
+                                @Html.HiddenFor(m => m.Number)
+                                <div>
+                                    &nbsp
+                                </div>
+                                <div>@Html.ValidationMessageFor(m => m.Number)</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 gap-bottom5">
+                            <div class="col-lg-4 gap-top5 text-right">
+                                <b>Billable</b>
+                            </div>
+                            <div class="col-lg-7 gap-top5">
+                                @Html.CheckBoxFor(m => m.Billable)
+                                <div>
+                                    &nbsp
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -59,3 +82,10 @@
     </div>
 
 }
+
+
+
+
+
+
+
