--- a/Web/TimeManagement/Views/Master/WorkcodeActivity.cshtml
+++ b/Web/TimeManagement/Views/Master/WorkcodeActivity.cshtml
@@ -61,7 +61,10 @@
                 $('div#MainPopUp').html(data);
                 $('div#MainPopUp').modal('show');
             },
-         cache: false
+             cache: false,
+             error: function (e) {
+                 console.log(e);
+             }
      });
  }
 
@@ -75,7 +78,10 @@
              $('div#MainPopUp').html(data);
              $('div#MainPopUp').modal('show');
          },
-         cache: false
+         cache: false,
+         error: function (e) {
+             console.log(e);
+         }
      });
  }
 
